<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_group_user">
        <EditTextPreference
            android:title="@string/setting_id"
            android:key="@string/key_studentID"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:title="@string/setting_name"
            android:key="@string/key_studentName"
            android:inputType="text" />
        <kr.hee.kwnoti.settings_activity.AutoCompleteEditTextPreference
            android:title="@string/setting_major"
            android:key="@string/key_studentMajor" />
        <EditTextPreference
            android:title="@string/setting_u_pwd"
            android:key="@string/key_studentUCampusPassword"
            android:inputType="textPassword" />
        <Preference
            android:title="학생증 사진 설정"
            android:key="@string/key_studentImage"
            android:persistent="false"
            android:summary="학생증 사진을 수정할 수 있습니다.">
        </Preference>
        <!--<EditTextPreference
            android:title="중앙도서관 비밀번호"
            android:key="@string/key_studentLibraryPassword"
            android:inputType="textPassword"
            android:summary="* 현재 구현되지 않은 기능입니다." />-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_group_push">
        <SwitchPreference
            android:title="@string/setting_send_push"
            android:key="@string/key_pushActive"
            android:summaryOn="@string/setting_send_push_on"
            android:summaryOff="@string/setting_send_push_off"
            android:defaultValue="true" />
        <SwitchPreference
            android:title="@string/setting_push_ringtone"
            android:key="@string/key_pushSound"
            android:summaryOn="@string/setting_push_ringtone_on"
            android:summaryOff="@string/setting_push_ringtone_off"
            android:defaultValue="true"
            android:dependency="@string/key_pushActive" />
        <SwitchPreference
            android:title="@string/setting_push_vibrate"
            android:key="@string/key_pushVibrator"
            android:summaryOn="@string/setting_push_vibrate_on"
            android:summaryOff="@string/setting_push_vibrate_off"
            android:defaultValue="true"
            android:dependency="@string/key_pushActive" />
        <Preference
            android:title="@string/setting_push_filter"
            android:persistent="false"
            android:summary="@string/setting_push_filter_description"
            android:dependency="@string/key_pushActive">
            <intent android:action="hee.kwnoti.intent.action.PUSH_FILTER" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_etc">
        <!--<SwitchPreference
            android:title="메인 화면에 날씨 표시"
            android:key="@string/key_weatherService"
            android:defaultValue="true"
            android:summaryOn="1시간 뒤의 월계동의 날씨를 표시합니다."
            android:summaryOff="메인 화면에 날씨를 표시하지 않습니다." />-->
        <Preference
            android:title="@string/setting_etc_appInfo"
            android:persistent="false">
            <intent android:action="android.intent.action.SHOW_APP_INFO" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>