<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.hee.kwnoti.wifi_activity.WifiActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/wifi_scroll"
        android:layout_width="320dp"
        android:layout_height="224dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/wifi_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/wifi_privacy" />
    </ScrollView>


    <CheckBox
        android:id="@+id/wifi_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_below="@id/wifi_scroll"
        android:text="@string/wifi_agree" />

    <TextView
        android:id="@+id/wifi_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/wifi_title_enterPwd"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/wifi_password"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_password_title"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:maxLength="8"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/wifi_hint" />

    <Button
        android:id="@+id/wifi_btn_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/wifi_password"
        android:text="@string/wifi_request" />
</RelativeLayout>
