<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown500"
    tools:context="kr.hee.kwnoti.student_card_activity.StudentCardActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_id"
        android:padding="16dp">
        <ImageView
            android:id="@+id/studentCard_qrCode"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:background="@drawable/bg_qr_loading"
            android:contentDescription="@string/studentCard_description_qrCode" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/studentCard_refresh"
            android:textSize="12sp"
            android:textColor="@color/gray500"
            android:textAlignment="center" />

        <!-- 학생 데이터 -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:weightSum="5">
            <TableRow android:layout_margin="8dp" android:gravity="center_vertical">
                <TextView style="@style/StudentCard_titleStyle"
                    android:text="@string/studentCard_id" />
                <TextView style="@style/StudentCard_textStyle"
                    android:id="@+id/studentCard_ID" />
            </TableRow>
            <View android:layout_height="1px" android:background="@color/gray700" />
            <TableRow android:layout_margin="8dp" android:gravity="center_vertical">
                <TextView style="@style/StudentCard_titleStyle"
                    android:text="@string/studentCard_name" />
                <TextView style="@style/StudentCard_textStyle"
                    android:id="@+id/studentCard_name" />
            </TableRow>
            <View android:layout_height="1px" android:background="@color/gray600" />
            <TableRow android:layout_margin="8dp" android:gravity="center_vertical">
                <TextView style="@style/StudentCard_titleStyle"
                    android:text="@string/studentCard_major" />
                <TextView style="@style/StudentCard_textStyle"
                    android:id="@+id/studentCard_major" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>