<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="kr.hee.kwnoti.MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3">
        <RelativeLayout android:layout_width="@dimen/card_size_x3"
            android:layout_height="wrap_content"
            android:background="@color/brown800"
            android:layout_columnSpan="3">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/splash_mark" />
        </RelativeLayout>

        <TextView style="@style/CardStyle"
            android:id="@+id/main_btn_idCard"
            android:background="@color/brown600"
            android:text="@string/main_idCard" />
        <TextView style="@style/CardStyle"
            android:id="@+id/main_btn_calendar"
            android:background="@color/brown700"
            android:text="@string/main_calendar" />

        <!--<TextView style="@style/CardStyle"-->
            <!--android:id="@+id/main_btn_food"-->
            <!--android:background="@color/brown400"-->
            <!--android:text="금주의 식단" />-->
        <!--<TextView style="@style/CardStyle"-->
            <!--android:id="@+id/main_btn_facility"-->
            <!--android:text="시설안내" />-->
        <!--<TextView style="@style/CardStyle"-->
            <!--android:id="@+id/main_btn_phone"-->
            <!--android:text="구내전화" />-->
        <TextView style="@style/CardStyle"
            android:id="@+id/main_btn_info"
            android:layout_width="@dimen/card_size_x2"
            android:layout_height="@dimen/card_size_x2"
            android:layout_columnSpan="2"
            android:layout_rowSpan="2"
            android:background="@color/brown900"
            android:text="@string/main_info"
            android:textSize="24sp" />
        <TextView style="@style/CardStyle"
            android:id="@+id/main_btn_settings"
            android:background="@color/brown300"
            android:text="@string/main_settings" />



        <TextView style="@style/CardStyle"
            android:id="@+id/main_btn_link_dongMoon"
            android:background="@drawable/icon_refresh"
            android:text="총동문회\n바로가기"
            android:textColor="@color/brown800" />
        <TextView style="@style/CardStyle"
            android:id="@+id/main_btn_link_uCampus"
            android:background="@drawable/icon_refresh"
            android:text="유캠퍼스\n바로가기"
            android:textColor="@color/brown800" />
        <TextView style="@style/CardStyle"
            android:id="@+id/main_btn_link_mediaKW"
            android:background="@drawable/icon_refresh"
            android:text="미디어광운\n바로가기"
            android:textColor="@color/brown800" />
        <TextView style="@style/CardStyle"
            android:background="@drawable/icon_refresh"
            android:text="중앙도서관\n바로가기"
            android:textColor="@color/brown800" />
    </GridLayout>
</ScrollView>